// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rawHandler should convert HTML post to blocks with minimal content changes 1`] = `
"<!-- wp:heading -->
<h2>Howdy</h2>
<!-- /wp:heading -->

<!-- wp:image -->
<figure class=\\"wp-block-image\\"><img src=\\"https://w.org\\" alt=\\"\\"/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p>This is a paragraph.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Preserve <span style=\\"color:red\\">me</span>!</p>
<!-- /wp:paragraph -->

<!-- wp:heading {\\"level\\":3} -->
<h3>More tag</h3>
<!-- /wp:heading -->

<!-- wp:more -->
<!--more-->
<!-- /wp:more -->

<!-- wp:heading {\\"level\\":3} -->
<h3>Shortcode</h3>
<!-- /wp:heading -->

<!-- wp:gallery {\\"ids\\":[1],\\"columns\\":3,\\"linkTo\\":\\"attachment\\"} -->
<ul class=\\"wp-block-gallery columns-3 is-cropped\\"><li class=\\"blocks-gallery-item\\"><figure><img data-id=\\"1\\" class=\\"wp-image-1\\"/></figure></li></ul>
<!-- /wp:gallery -->

<!-- wp:html -->
<dl>
	<dt>Term</dt>
	<dd>
		Description.
	</dd>
</dl>
<!-- /wp:html -->

<!-- wp:list {\\"ordered\\":true} -->
<ol><li>Item</li></ol>
<!-- /wp:list -->

<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p>Text.</p></blockquote>
<!-- /wp:quote -->

<!-- wp:html -->
<blockquote><h1>Heading</h1><p>Text.</p></blockquote>
<!-- /wp:html -->"
`;

exports[`rawHandler should convert a caption shortcode 1`] = `
"<!-- wp:image {\\"align\\":\\"none\\",\\"id\\":122,\\"className\\":\\"size-medium wp-image-122\\"} -->
<figure class=\\"wp-block-image alignnone size-medium wp-image-122\\"><img src=\\"image.png\\" alt=\\"\\" class=\\"wp-image-122\\"/><figcaption>test</figcaption></figure>
<!-- /wp:image -->"
`;

exports[`rawHandler should convert a caption shortcode with caption 1`] = `
"<!-- wp:image {\\"align\\":\\"none\\",\\"id\\":122,\\"className\\":\\"size-medium wp-image-122\\"} -->
<figure class=\\"wp-block-image alignnone size-medium wp-image-122\\"><img src=\\"image.png\\" alt=\\"\\" class=\\"wp-image-122\\"/><figcaption><a href=\\"https://w.org\\">test</a></figcaption></figure>
<!-- /wp:image -->"
`;

exports[`rawHandler should convert a caption shortcode with link 1`] = `
"<!-- wp:image {\\"align\\":\\"none\\",\\"id\\":754} -->
<figure class=\\"wp-block-image alignnone\\"><a href=\\"http://build.wordpress-develop.test/wp-content/uploads/2011/07/100_5478.jpg\\"><img src=\\"http://build.wordpress-develop.test/wp-content/uploads/2011/07/100_5478.jpg?w=604\\" alt=\\"Bell on Wharf\\" class=\\"wp-image-754\\"/></a><figcaption>Bell on wharf in San Francisco</figcaption></figure>
<!-- /wp:image -->"
`;
